Cleaner code, querying db by id

--- a/src/main/webapp/restapi/json_DAOBean.html
+++ b/src/main/webapp/restapi/json_DAOBean.html
@@ -68,7 +68,7 @@
 
       <dl class="dl-horizontal">
         <dt>Subtypes</dt>
-        <dd><a href="json_User.html">User</a></dd>
+        <dd><a href="json_User.html">User</a>, <a href="json_Phone.html">Phone</a>, <a href="json_Address.html">Address</a>, <a href="json_Email.html">Email</a></dd>
       </dl>
 
       <table class="table datatype-properties">
