--- a/src/main/webapp/restapi/json_User.html
+++ b/src/main/webapp/restapi/json_User.html
@@ -248,13 +248,23 @@
     &quot;street&quot; : &quot;...&quot;,
     &quot;city&quot; : &quot;...&quot;,
     &quot;state&quot; : &quot;...&quot;,
-    &quot;zip&quot; : &quot;...&quot;
+    &quot;zip&quot; : &quot;...&quot;,
+    &quot;id&quot; : &quot;...&quot;,
+    &quot;createDt&quot; : 12345,
+    &quot;updateDt&quot; : 12345,
+    &quot;updateBy&quot; : &quot;...&quot;,
+    &quot;deleteDt&quot; : 12345
   }, {
     &quot;addressId&quot; : 12345,
     &quot;street&quot; : &quot;...&quot;,
     &quot;city&quot; : &quot;...&quot;,
     &quot;state&quot; : &quot;...&quot;,
-    &quot;zip&quot; : &quot;...&quot;
+    &quot;zip&quot; : &quot;...&quot;,
+    &quot;id&quot; : &quot;...&quot;,
+    &quot;createDt&quot; : 12345,
+    &quot;updateDt&quot; : 12345,
+    &quot;updateBy&quot; : &quot;...&quot;,
+    &quot;deleteDt&quot; : 12345
   } ],
   &quot;roles&quot; : [ &quot;...&quot;, &quot;...&quot; ],
   &quot;country&quot; : &quot;...&quot;,
@@ -265,23 +275,45 @@
     &quot;type&quot; : &quot;...&quot;,
     &quot;areaCode&quot; : &quot;...&quot;,
     &quot;extension&quot; : &quot;...&quot;,
-    &quot;primary&quot; : true
+    &quot;primary&quot; : true,
+    &quot;id&quot; : &quot;...&quot;,
+    &quot;createDt&quot; : 12345,
+    &quot;updateDt&quot; : 12345,
+    &quot;updateBy&quot; : &quot;...&quot;,
+    &quot;deleteDt&quot; : 12345
   }, {
     &quot;phoneId&quot; : 12345,
     &quot;number&quot; : &quot;...&quot;,
     &quot;type&quot; : &quot;...&quot;,
     &quot;areaCode&quot; : &quot;...&quot;,
     &quot;extension&quot; : &quot;...&quot;,
-    &quot;primary&quot; : true
+    &quot;primary&quot; : true,
+    &quot;id&quot; : &quot;...&quot;,
+    &quot;createDt&quot; : 12345,
+    &quot;updateDt&quot; : 12345,
+    &quot;updateBy&quot; : &quot;...&quot;,
+    &quot;deleteDt&quot; : 12345
   } ],
   &quot;emails&quot; : [ {
+    &quot;emailId&quot; : 12345,
     &quot;type&quot; : &quot;...&quot;,
     &quot;value&quot; : &quot;...&quot;,
-    &quot;primary&quot; : true
+    &quot;primary&quot; : true,
+    &quot;id&quot; : &quot;...&quot;,
+    &quot;createDt&quot; : 12345,
+    &quot;updateDt&quot; : 12345,
+    &quot;updateBy&quot; : &quot;...&quot;,
+    &quot;deleteDt&quot; : 12345
   }, {
+    &quot;emailId&quot; : 12345,
     &quot;type&quot; : &quot;...&quot;,
     &quot;value&quot; : &quot;...&quot;,
-    &quot;primary&quot; : true
+    &quot;primary&quot; : true,
+    &quot;id&quot; : &quot;...&quot;,
+    &quot;createDt&quot; : 12345,
+    &quot;updateDt&quot; : 12345,
+    &quot;updateBy&quot; : &quot;...&quot;,
+    &quot;deleteDt&quot; : 12345
   } ],
   &quot;showpassword&quot; : &quot;...&quot;,
   &quot;id&quot; : &quot;...&quot;,
