--- a/src/main/webapp/restapi/resources.html
+++ b/src/main/webapp/restapi/resources.html
@@ -91,11 +91,15 @@
 </td>
       <td class="text-nowrap"><ul class="list-unstyled"><li><samp>  <span class="resource-path">/user</span>
 </samp></li><li><samp>  <span class="resource-path">/user/login</span>
+</samp></li><li><samp>  <span class="resource-path">/user/search</span>
+</samp></li><li><samp>  <span class="resource-path">/user/{id}</span>
 </samp></li><li><samp>  <span class="resource-path">/user/{userId}</span>
 </samp></li></ul></td>
       <td class="text-nowrap"><ul class="list-unstyled"><li><samp>  <span class="label label-default resource-method">GET</span> <span class="label label-default resource-method">POST</span> <span class="label label-default resource-method">PUT</span> 
 </samp></li><li><samp>  <span class="label label-default resource-method">POST</span> 
-</samp></li><li><samp>  <span class="label label-default resource-method">DELETE</span> <span class="label label-default resource-method">GET</span> 
+</samp></li><li><samp>  <span class="label label-default resource-method">GET</span> 
+</samp></li><li><samp>  <span class="label label-default resource-method">GET</span> 
+</samp></li><li><samp>  <span class="label label-default resource-method">DELETE</span> 
 </samp></li></ul></td>
       <td>  <span class="resource-description">Created by phil on 1/14/2018.</span>
 </td>
