--- a/src/main/webapp/restapi/json_Address.html
+++ b/src/main/webapp/restapi/json_Address.html
@@ -125,6 +125,41 @@
 </td>
         </tr>
         </tbody>
+        <tr>
+          <td colspan="3"><h5 class="text-muted">Properties inherited from <a href="json_DAOBean.html">DAOBean</a></h5></td>
+        </tr>
+        <tbody>
+        <tr>
+          <td><span class="property-name">id</span></td>
+          <td><span class="datatype-reference">string
+</span></td>
+          <td><span class="property-description"></span></td>
+        </tr>
+        <tr>
+          <td><span class="property-name">createDt</span></td>
+          <td><span class="datatype-reference">number
+</span></td>
+          <td><span class="property-description"></span></td>
+        </tr>
+        <tr>
+          <td><span class="property-name">updateDt</span></td>
+          <td><span class="datatype-reference">number
+</span></td>
+          <td><span class="property-description"></span></td>
+        </tr>
+        <tr>
+          <td><span class="property-name">updateBy</span></td>
+          <td><span class="datatype-reference">string
+</span></td>
+          <td><span class="property-description"></span></td>
+        </tr>
+        <tr>
+          <td><span class="property-name">deleteDt</span></td>
+          <td><span class="datatype-reference">number
+</span></td>
+          <td><span class="property-description"></span></td>
+        </tr>
+        </tbody>
       </table>
 
       <p class="lead">Example</p>
@@ -134,7 +169,12 @@
   &quot;street&quot; : &quot;...&quot;,
   &quot;city&quot; : &quot;...&quot;,
   &quot;state&quot; : &quot;...&quot;,
-  &quot;zip&quot; : &quot;...&quot;
+  &quot;zip&quot; : &quot;...&quot;,
+  &quot;id&quot; : &quot;...&quot;,
+  &quot;createDt&quot; : 12345,
+  &quot;updateDt&quot; : 12345,
+  &quot;updateBy&quot; : &quot;...&quot;,
+  &quot;deleteDt&quot; : 12345
 }</pre>
 
         <footer class="footer">
