--- a/src/main/webapp/restapi/json_Email.html
+++ b/src/main/webapp/restapi/json_Email.html
@@ -80,6 +80,15 @@
         </thead>
         <tbody>
         <tr>
+          <td>  <span class="property-name">emailId</span>
+</td>
+          <td>  <span class="datatype-reference">number
+</span>
+</td>
+          <td>  <span class="property-description"></span>
+</td>
+        </tr>
+        <tr>
           <td>  <span class="property-name">type</span>
 </td>
           <td>  <span class="datatype-reference">string
@@ -107,14 +116,55 @@
 </td>
         </tr>
         </tbody>
+        <tr>
+          <td colspan="3"><h5 class="text-muted">Properties inherited from <a href="json_DAOBean.html">DAOBean</a></h5></td>
+        </tr>
+        <tbody>
+        <tr>
+          <td><span class="property-name">id</span></td>
+          <td><span class="datatype-reference">string
+</span></td>
+          <td><span class="property-description"></span></td>
+        </tr>
+        <tr>
+          <td><span class="property-name">createDt</span></td>
+          <td><span class="datatype-reference">number
+</span></td>
+          <td><span class="property-description"></span></td>
+        </tr>
+        <tr>
+          <td><span class="property-name">updateDt</span></td>
+          <td><span class="datatype-reference">number
+</span></td>
+          <td><span class="property-description"></span></td>
+        </tr>
+        <tr>
+          <td><span class="property-name">updateBy</span></td>
+          <td><span class="datatype-reference">string
+</span></td>
+          <td><span class="property-description"></span></td>
+        </tr>
+        <tr>
+          <td><span class="property-name">deleteDt</span></td>
+          <td><span class="datatype-reference">number
+</span></td>
+          <td><span class="property-description"></span></td>
+        </tr>
+        </tbody>
       </table>
 
       <p class="lead">Example</p>
       
       <pre class="prettyprint language-js example">{
+  &quot;emailId&quot; : 12345,
   &quot;type&quot; : &quot;...&quot;,
   &quot;value&quot; : &quot;...&quot;,
-  &quot;primary&quot; : true
+  &quot;primary&quot; : true,
+  &quot;id&quot; : &quot;...&quot;,
+  &quot;createDt&quot; : 12345,
+  &quot;updateDt&quot; : 12345,
+  &quot;updateBy&quot; : &quot;...&quot;,
+  &quot;deleteDt&quot; : 12345
 }</pre>
 
         <footer class="footer">
